syntax = "proto3";
package org.leialearns.grpc.example;
option go_package = "src/pkg/grpc/example";

/* The GreeterService defines the gRPC requests for greeting AxonServer. */
service GreeterService {

    /* Greets AxonServer. */
    rpc Greet (Greeting) returns (Acknowledgement) {
    }

    rpc Greetings (Empty) returns (stream Greeting) {
    }
//    rpc Stop (Stopper) returns (Acknowledgement) {
//    }
}

message Greeting {
    string message = 1;
}

message Acknowledgement {
    string message = 1;
}

message Empty {}

//message Stopper {
//}

message GreetCommand {
    string aggregateIdentifier = 1;
    Greeting message = 2;
}

message GreetedEvent {
    Greeting message = 1;
}
